[package]
name = "http_cat"
version = "0.1.0"
authors = ["Valentine Briese <valentinegb@icloud.com"]
edition = "2021"
description = "Rust wrapper around http.cat"
repository = "https://github.com/valentinegb/http-cat-rs"
license = "MIT"
keywords = ["cat", "cats", "silly"]
categories = ["api-bindings"]

[dependencies]
http = { version = "1.0.0", optional = true }
image = { version = "0.24.7", default-features = false, features = ["jpeg"] }
reqwest = "0.11.22"
rocket = { version = "0.5.0", optional = true, default-features = false }
thiserror = "1.0.50"

[dev-dependencies]
tokio = { version = "1.34.0", features = ["rt", "macros", "rt-multi-thread"] }
